* [Bug 690] Fix a Windows DNS lookup buffer overflow.
* [Bug 670] Resolved a Windows issue with the dynamic interface rescan code.
* K&R C support is being deprecated.
* [Bug 714] ntpq -p should conflict with -i, not -c.
* WWV refclock improvements from Dave Mills.
* [Bug 689] Deprecate HEATH GC-1001 II; the driver never worked.
* [Bug 342] Deprecate broken TRAK refclock driver.
* [Bug 340] Deprecate broken MSF EES refclock driver.
* Support separate PPS devices for PARSE refclocks.
* [Bug 637, 51?] Dynamic interface scanning can now be done.
* Options processing now uses GNU AutoGen.

(4.2.2p4) Released by Harlan Stenn <stenn@ntp.isc.org>
 * [Bug 710] compat getnameinfo() has off-by-one error
 * [Bug 690] Buffer overflow in Windows when doing DNS Lookups

(4.2.2p3) Released by Harlan Stenn <stenn@ntp.isc.org>
 * Make the ChangeLog file cleaner and easier to read
 * [Bug 601] ntpq's decodeint uses an extra level of indirection
 * [Bug 657] Different OSes need different sized args for IP_MULTICAST_LOOP
 * release engineering/build changes
 * Documentation fixes
 * Get sntp working under AIX-5

(4.2.2p2) (broken)
 * Get sntp working under AIX-5

(4.2.2p1)
 * [Bug 661] Use environment variable to specify the base path to openssl.
 * Resolve an ambiguity in the copyright notice
 * Added some new documentation files
 * URL cleanup in the documentation
 * [Bug 657]: IP_MULTICAST_LOOP uses a u_char value/size
 * quiet gcc4 complaints
 * more Coverity fixes
 * [Bug 614] manage file descriptors better
 * [Bug 632] update kernel PPS offsets when PPS offset is re-configured
 * [Bug 637] Ignore UP in*addr_any interfaces
 * [Bug 633] Avoid writing files in srcdir
 * release engineering/build changes

(4.2.2)
 * SNTP
 * Many bugfixes
 * Implements the current "goal state" of NTPv4
 * Autokey improvements
 * Much better IPv6 support
 * Rewrite of the multicast code
 * New version numbering scheme

(4.2.0)
* More stuff than I have time to document
* IPv6 support
* Bugfixes